--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.4.7",
+    "core-js-compat": "^3.4.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
